compiler/testData/diagnostics/tests/recovery/emptyTypeArgs.kt
// FIR_IDENTICAL
fun main(args: Array<String>) {
    args is Array<<!SYNTAX!><!>>
}